# VIGIL

./: .gitignore  README.md  flake.nix  pyproject.toml
examples/: __init__.py
examples/embodied_agent/: README.md  __init__.py  setup_api_server.sh
examples/embodied_agent/agent/: __init__.py  inference.py  loop.py
examples/embodied_agent/api/: embedded_server.py  main.py
examples/embodied_agent/api/routes/: debug_frame.py  video_stream.py
examples/embodied_agent/conversation/: __init__.py  manager.py
examples/embodied_agent/orchestration/: __init__.py  pipeline.py
examples/embodied_agent/ui/: __init__.py  app.py
examples/minimal/: quickstart.py
tests/: conftest.py  test_agent_loop_tools.py  test_conversation_manager.py  test_embeddings_offline.py  test_graph_history.py  test_inference_offline.py  test_pipeline_auxiliary_context.py  test_pipeline_interactive_options.py  test_prompt_builder_history.py  test_retriever_lookup.py  test_tool_dispatcher.py  test_ui_app_source_contracts.py
vigil/: __init__.py
vigil/memory/: __init__.py  retriever.py  semantic_index.py
vigil/observability/: __init__.py
vigil/perception/: __init__.py  types.py  world_state.py
vigil/perception/detectors/: __init__.py  yolo.py
vigil/tools/: __init__.py  dispatcher.py
