[project]
name = "vigil"
version = "0.1.0"
description = "VIGIL: lightweight spatial-temporal memory for edge embodied AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu",
    "numpy",
    "sentence-transformers",
]

[project.optional-dependencies]
perception = [
    "opencv-python",
    "torch>=2.4",
    "ultralytics",
]
observability = [
    "matplotlib",
    "networkx",
]
examples = [
    "fastapi",
    "matplotlib",
    "networkx",
    "opencv-python",
    "pillow",
    "pydantic",
    "textual>=0.75.0",
    "torch>=2.4",
    "transformers>=4.40",
    "ultralytics",
    "uvicorn",
    "vllm>=0.16.0",
    "websockets",
]
dev = [
    "pytest",
    "pytest-benchmark",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vigil"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
python_files = ["test_*.py", "bench_*.py"]
testpaths = ["tests"]
